# Enclyr

./: .gitignore  README.md
.github/: LICENSE.md
core/: Cargo.toml
core/src/: error.rs  lib.rs
core/src/account/: account.rs  mod.rs
core/src/imap/: client.rs  mod.rs
ui/: LICENSE.md
ui/android/: local.properties
