[package]
name = "enclyr-core"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-only"

[dependencies]
imap = "3"
lettre = { version = "0.11", features = ["smtp-transport", "rustls-tls"] }
mailparse = "0.14"
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
thiserror = "1"
tokio = { version = "1", features = ["full"] }

